Update experiment2 after refactor

--- a/experiment2.ipynb
+++ b/experiment2.ipynb
@@ -185,11 +185,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "a621350c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STD peaks: torch.Size([6240, 3])\n",
+      "RI  peaks: torch.Size([3426, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch_find_peaks import find_peaks_3d\n",
+    "\n",
+    "# Detect peaks\n",
+    "peaks_std = find_peaks_3d(\n",
+    "    cc_std,\n",
+    "    min_distance=1,\n",
+    "    threshold_abs=0.01,\n",
+    "    return_as=\"torch\"\n",
+    ")\n",
+    "\n",
+    "peaks_ri = find_peaks_3d(\n",
+    "    cc_ri,\n",
+    "    min_distance=1,\n",
+    "    threshold_abs=0.01,\n",
+    "    return_as=\"torch\"\n",
+    ")\n",
+    "\n",
+    "print(\"STD peaks:\", peaks_std[0].shape)\n",
+    "print(\"RI  peaks:\", peaks_ri[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "89e8454a",
+   "id": "4d01b309",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top STD peak score: 48757.70408683144\n",
+      "Top RI  peak score: 36629.60757113414\n"
+     ]
+    }
+   ],
+   "source": [
+    "#filtering peaks. top-K strongest detections, not all peaks.\n",
+    "TOPK = 50\n",
+    "\n",
+    "idx_std = peaks_std[1].argsort(descending=True)[:TOPK]\n",
+    "idx_ri  = peaks_ri[1].argsort(descending=True)[:TOPK]\n",
+    "\n",
+    "top_std = peaks_std[0][idx_std]\n",
+    "top_ri  = peaks_ri[0][idx_ri]\n",
+    "\n",
+    "scores_std = peaks_std[1][idx_std]\n",
+    "scores_ri  = peaks_ri[1][idx_ri]\n",
+    "\n",
+    "print(\"Top STD peak score:\", scores_std[0].item())\n",
+    "print(\"Top RI  peak score:\", scores_ri[0].item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d9812828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GT protein particles: (1451, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "gt = pd.read_csv(\n",
+    "    \"particle_locations.txt\",\n",
+    "    sep=r\"\\s+\",\n",
+    "    header=None,\n",
+    "    names=[\"label\", \"z\", \"y\", \"x\", \"rot1\", \"rot2\", \"rot3\"]\n",
+    ")\n",
+    "\n",
+    "# Keeping only protein particles (exclude vesicle + fiducial)\n",
+    "gt_protein = gt[~gt[\"label\"].isin([\"vesicle\", \"fiducial\"])]\n",
+    "\n",
+    "gt_xyz = gt_protein[[\"z\", \"y\", \"x\"]].values\n",
+    "\n",
+    "print(\"GT protein particles:\", gt_xyz.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e970d59a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from scipy.spatial import cKDTree\n",
+    "\n",
+    "def evaluate_detections(detected_xyz, gt_xyz, max_dist=8):\n",
+    "    \"\"\"\n",
+    "    detected_xyz: (N,3) array of detected peak coordinates (z,y,x)\n",
+    "    gt_xyz:       (M,3) array of GT particle coordinates\n",
+    "    max_dist:     max distance (voxels) to count as correct detection\n",
+    "    \"\"\"\n",
+    "    tree = cKDTree(gt_xyz)\n",
+    "    matched_gt = set()\n",
+    "    distances = []\n",
+    "\n",
+    "    for p in detected_xyz:\n",
+    "        dist, idx = tree.query(p, k=1)\n",
+    "        if dist <= max_dist and idx not in matched_gt:\n",
+    "            matched_gt.add(idx)\n",
+    "            distances.append(dist)\n",
+    "\n",
+    "    return np.array(distances), len(matched_gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "89e8454a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STD hits: 1 / 50\n",
+      "RI  hits: 1 / 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluating how many of those top-K are close to real particles\n",
+    "\n",
+    "dist_std, hits_std = evaluate_detections(\n",
+    "    top_std.cpu().numpy(),\n",
+    "    gt_xyz,\n",
+    "    max_dist=8\n",
+    ")\n",
+    "\n",
+    "dist_ri, hits_ri = evaluate_detections(\n",
+    "    top_ri.cpu().numpy(),\n",
+    "    gt_xyz,\n",
+    "    max_dist=8\n",
+    ")\n",
+    "\n",
+    "print(\"STD hits:\", hits_std, \"/\", TOPK)\n",
+    "print(\"RI  hits:\", hits_ri,  \"/\", TOPK)"
+   ]
   }
  ],
  "metadata": {
